--- a/QuanLyNhaXe01/QuanLyNhaXe01.csproj
+++ b/QuanLyNhaXe01/QuanLyNhaXe01.csproj
@@ -74,6 +74,12 @@
     <Compile Include="MyDB.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="revenueForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="revenueForm.Designer.cs">
+      <DependentUpon>revenueForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vehicle\addVehicleForm.cs">
       <SubType>Form</SubType>
     </Compile>
