--- a/QuanLyNhaXe01/QuanLyNhaXe01.csproj
+++ b/QuanLyNhaXe01/QuanLyNhaXe01.csproj
@@ -80,6 +80,12 @@
     <Compile Include="revenueForm.Designer.cs">
       <DependentUpon>revenueForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Test.Designer.cs">
+      <DependentUpon>Test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Vehicle\addVehicleForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +148,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Test.resx">
+      <DependentUpon>Test.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vehicle\addVehicleForm.resx">
       <DependentUpon>addVehicleForm.cs</DependentUpon>
     </EmbeddedResource>
