Thêm form change đó nhe

--- a/QuanLyNhaXe01/QuanLyNhaXe01.csproj
+++ b/QuanLyNhaXe01/QuanLyNhaXe01.csproj
@@ -54,6 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Change.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Change.Designer.cs">
+      <DependentUpon>Change.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataSetQuanLyNhaXe.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
